Fixed hamburger menu z-index

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -52,6 +52,7 @@
     .menu #container {
         background: var(--background);
         overflow: hidden;
+        z-index: 999;
 
         display: flex;
         flex-direction: column;
